# monotonic-nn

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Constrained_Monotonic_Neural_Networks_experiments.ipynb  README.md  SECURITY.md  _pyproject.toml  index.html  mypy.ini  objects.inv  pyproject.toml  run_jupyter.sh  settings.ini  setup.py  sitemap.xml  token  versions.json
.devcontainer/cuda-tf/: devcontainer.json  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: check-broken-links-in-docs.yaml  codeql.yaml  dependency-review.yaml  deploy-docs.yaml  test.yaml  update_release_notes.yaml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/Experiments/: index.html
0.1.0/Helpers/: index.html
0.1.0/InDepth/: index.html
0.1.0/Layers/: index.html
0.1.0/License/: index.html
0.1.0/MonoDenseLayer/: index.html
0.1.0/changelog_not_found/: index.html
0.1.0/cli_commands_not_found/: index.html
0.1.0/search/: search_index.json
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/Experiments/: index.html
0.2.0/Helpers/: index.html
0.2.0/InDepth/: index.html
0.2.0/Layers/: index.html
0.2.0/License/: index.html
0.2.0/MonoDenseLayer/: index.html
0.2.0/changelog_not_found/: index.html
0.2.0/cli_commands_not_found/: index.html
0.2.0/search/: search_index.json
0.3/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/CHANGELOG/: index.html
0.3.0/Experiments/: index.html
0.3.0/Helpers/: index.html
0.3.0/InDepth/: index.html
0.3.0/Layers/: index.html
0.3.0/License/: index.html
0.3.0/MonoDenseLayer/: index.html
0.3.0/SUMMARY/: index.html
0.3.0/TopLevel/: index.html
0.3.0/changelog_not_found/: index.html
0.3.0/cli_commands_not_found/: index.html
0.3.0/search/: search_index.json
0.3.0rc0/: 404.html  CNAME  index.html  sitemap.xml
0.3.0rc0/Experiments/: index.html
0.3.0rc0/Helpers/: index.html
0.3.0rc0/InDepth/: index.html
0.3.0rc0/Layers/: index.html
0.3.0rc0/License/: index.html
0.3.0rc0/MonoDenseLayer/: index.html
0.3.0rc0/SUMMARY/: index.html
0.3.0rc0/changelog_not_found/: index.html
0.3.0rc0/cli_commands_not_found/: index.html
0.3.1/: 404.html  index.html  sitemap.xml
0.3.1/CHANGELOG/: index.html
0.3.1/Experiments/: index.html
0.3.1/Helpers/: index.html
0.3.1/InDepth/: index.html
0.3.1/Layers/: index.html
0.3.1/License/: index.html
0.3.1/MonoDenseLayer/: index.html
0.3.1/SUMMARY/: index.html
0.3.1/TopLevel/: index.html
0.3.1/cli_commands_not_found/: index.html
0.3.1/search/: search_index.json
0.3.1rc1/: 404.html  index.html  sitemap.xml
0.3.1rc1/CHANGELOG/: index.html
0.3.1rc1/Experiments/: index.html
0.3.1rc1/Helpers/: index.html
0.3.1rc1/InDepth/: index.html
0.3.1rc1/Layers/: index.html
0.3.1rc1/License/: index.html
0.3.1rc1/MonoDenseLayer/: index.html
0.3.1rc1/TopLevel/: index.html
0.3.1rc1/cli_commands_not_found/: index.html
0.3.1rc1/search/: search_index.json
0.3.1rc2/: 404.html  index.html  sitemap.xml
0.3.1rc2/CHANGELOG/: index.html
0.3.1rc2/Experiments/: index.html
0.3.1rc2/Helpers/: index.html
0.3.1rc2/InDepth/: index.html
0.3.1rc2/Layers/: index.html
0.3.1rc2/License/: index.html
0.3.1rc2/MonoDenseLayer/: index.html
0.3.1rc2/TopLevel/: index.html
0.3.1rc2/cli_commands_not_found/: index.html
0.3.1rc2/search/: search_index.json
0.3.2rc0/: 404.html  index.html  sitemap.xml
0.3.2rc0/CHANGELOG/: index.html
0.3.2rc0/Experiments/: index.html
0.3.2rc0/Helpers/: index.html
0.3.2rc0/InDepth/: index.html
0.3.2rc0/Layers/: index.html
0.3.2rc0/License/: index.html
0.3.2rc0/MonoDenseLayer/: index.html
0.3.2rc0/TopLevel/: index.html
0.3.2rc0/cli_commands_not_found/: index.html
0.3.2rc0/search/: search_index.json
0.3.3rc0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.3rc0/CHANGELOG/: index.html
0.3.3rc0/Experiments/: index.html
0.3.3rc0/Helpers/: index.html
0.3.3rc0/InDepth/: index.html
0.3.3rc0/Layers/: index.html
0.3.3rc0/License/: index.html
0.3.3rc0/MonoDenseLayer/: index.html
0.3.3rc0/TopLevel/: index.html
0.3.3rc0/cli_commands_not_found/: index.html
0.3.3rc0/search/: search_index.json
0.3/CHANGELOG/: index.html
0.3/Experiments/: index.html
0.3/Helpers/: index.html
0.3/InDepth/: index.html
0.3/Layers/: index.html
0.3/License/: index.html
0.3/MonoDenseLayer/: index.html
0.3/SUMMARY/: index.html
0.3/TopLevel/: index.html
0.3/cli_commands_not_found/: index.html
0.3/search/: search_index.json
Experiments/: index.html
Helpers/: index.html
InDepth/: index.html
LayersTopLevel/: index.html
License/: index.html
MonoDenseLayer/: index.html
SUMMARY/: index.html
_proc/: Experiments.ipynb  Helpers.ipynb  InDepth.ipynb  Layers.ipynb  License.ipynb  MonoDenseLayer.ipynb  index.ipynb
_proc/_docs/: robots.txt
_proc/experiments/: AutoMPG.ipynb  Blog.ipynb  Compas.ipynb  Heart.ipynb  Loan.ipynb
airt/: __about__.py  __init__.py  _modidx.py  docker_utils.py  eurostat.py  us_census.py
airt/_components/: helpers.py  mono_dense_layer.py
airt/keras/: __init__.py  continuous_learning.py  experiments.py
changelog_not_found/: index.html
cli_commands_not_found/: index.html
dev/: 404.html  index.html
dev/CHANGELOG/: index.html
dev/Experiments/: index.html
docs/: README.md  create_api_docs.py  docs.py  expand_markdown.py  mkdocs.yml  pllayground.ipynb  update_releases.py
mkdocs/: mkdocs.yml
monotonic/: __about__.py  __init__.py  helpers.py  import_utils.py
monotonic_nn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nbs/: .gitignore  Experiments.ipynb  InDepth.ipynb  Layers.ipynb  LayersTopLevel.ipynb  License.ipynb  MonoDenseLayer.ipynb  TopLevel.ipynb  example_torch.ipynb  index.ipynb  nbdev.yml  sidebar.yml
scripts/: build-docs-pre-commit.sh  lint-pre-commit.sh  static-analysis.sh  static-pre-commit.sh
search/: search_index.json
tests/: test_version.py
(+255 files in other folders)
