[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monotonic-nn"
description = "Implementation of the constrained monotonic neural networks."
readme = "README.md"
authors = [
    { name = "airt", email = "info@airt.ai" },
]

keywords = ["python"]

requires-python = ">=3.9,<3.13"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
]

dynamic = ["version"]

dependencies = [
    "tensorflow[and-cuda]>=2.18,<3"
]

[project.optional-dependencies]

docs = [
]

# dev dependencies
devdocs = [
    "mkdocs-material==9.5.49",
    "mkdocs-static-i18n==1.2.3",
    "mdx-include==1.4.2",
    "mkdocstrings[python]==0.27.0",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-git-revision-date-localized-plugin==1.3.0",
    "mike==2.1.3",  # versioning
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-macros-plugin==1.3.7",  # includes with variables
    "mkdocs-glightbox==0.4.0",  # img zoom
    "pillow==11.1.0",
    "cairosvg==2.7.1",
    "matplotlib==3.9.4",
    "pandas==2.2.3",
    "seaborn==0.13.2",
    "typer==0.15.1",
]

lint = [
    "types-PyYAML",
    "types-setuptools",
    "types-Pygments",
    "types-docutils",
    "mypy==1.14.1",
    "ruff==0.9.1",
    "bandit==1.8.2",
    "semgrep==1.102.0",
]

test-core = [
    "coverage[toml]==7.6.10",
    "pytest==8.3.4",
]

testing = [
    "monotonic-nn[test-core]",
]

dev = [
    "monotonic-nn[lint,testing,devdocs]",
    "pre-commit==4.0.1",
    "detect-secrets==1.5.0",
]

[project.urls]
Homepage = "https://monotonic.airt.ai/"
Documentation = "https://monotonic.airt.ai/"
Tracker = "https://github.com/airtai/monotonic-nn/issues"
Source = "https://github.com/airtai/monotonic-nn"

[tool.hatch.version]
path = "airt/__about__.py"

[tool.hatch.build]
skip-excluded-dirs = true
exclude = [
    "/tests",
    "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["airt"]

[tool.mypy]

files = [
    "airt",
    "tests",
    "docs",
    "examples",
]

strict = true
python_version = "3.9"
ignore_missing_imports = true
install_types = true
non_interactive = true
plugins = []

# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = false

disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = false

[tool.ruff]
fix = true
line-length = 88
target-version = "py39"
include = [
    "airt/**/*.py",
    "tests/**/*.pyi",
    "examples/**/*.py",
    "docs/*.py",
    "docs/docs_src/**/*.py",
    "pyproject.toml",
]
exclude = ["docs/docs_src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors     https://docs.astral.sh/ruff/rules/#error-e
    "W",     # pycodestyle warnings   https://docs.astral.sh/ruff/rules/#warning-w
    "C90",   # mccabe                 https://docs.astral.sh/ruff/rules/#mccabe-c90
    "N",     # pep8-naming            https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "D",     # pydocstyle             https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "I",     # isort                  https://docs.astral.sh/ruff/rules/#isort-i
    "F",     # pyflakes               https://docs.astral.sh/ruff/rules/#pyflakes-f
    "ASYNC", # flake8-async           https://docs.astral.sh/ruff/rules/#flake8-async-async
    "C4",    # flake8-comprehensions  https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "B",     # flake8-bugbear         https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "Q",     # flake8-quotes          https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "T20",   # flake8-print           https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "SIM",   # flake8-simplify        https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "PT",    # flake8-pytest-style    https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PTH",   # flake8-use-pathlib     https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TCH",   # flake8-type-checking   https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "RUF",   # Ruff-specific rules    https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "PERF",  # Perflint               https://docs.astral.sh/ruff/rules/#perflint-perf
    "UP",    # pyupgrade              https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

ignore = [
    "E501",  # line too long, handled by formatter later
    "C901",  # too complex
]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q -m 'not slow'"
testpaths = [
    "tests",
]
markers = [
    "slow",
    "all",
]

[tool.coverage.run]
parallel = true
branch = true
concurrency = [
    "multiprocessing",
    "thread"
]
source = [
    "docs/docs_src",
    "examples",
    "airt",
    "tests"
]
context = '${CONTEXT}'
omit = [
    "**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_also = [
    "if __name__ == .__main__.:",
    "self.logger",
    "def __repr__",
    "lambda: None",
    "from .*",
    "import .*",
    '@(abc\.)?abstractmethod',
    "raise NotImplementedError",
    'raise AssertionError',
    'logger\..*',
    "pass",
    '\.\.\.',
]
omit = [
    '*/__about__.py',
    '*/__main__.py',
    '*/__init__.py',
]

[tool.bandit]
